--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,8 @@
 
     <canvas width="960" height="800"></canvas>
 
-    <script src="/javascripts/d3.v4.min.js"></script>
+    <script src="/javascripts/d3.v3.min.js"></script>
+    <!-- <script src="/javascripts/d3.v4.min.js"></script> -->
     <script src="/javascripts/topojson.v1.min.js"></script>
     <script src="/javascripts/index.js"></script>
   </body>
