Removed TopoJson, using SVG base
Objects are now written in SVG using a csv data file. These are in the
public folder.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,11 +8,11 @@
   <body>
     <h1><%= title %></h1>
 
-    <canvas width="960" height="800"></canvas>
+    <!-- <canvas width="960" height="800"></canvas> -->
 
     <script src="/javascripts/d3.v3.min.js"></script>
     <!-- <script src="/javascripts/d3.v4.min.js"></script> -->
-    <script src="/javascripts/topojson.v1.min.js"></script>
+    <!-- <script src="/javascripts/topojson.v1.min.js"></script> -->
     <script src="/javascripts/index.js"></script>
   </body>
 </html>
